k8s/dependencies/1-core/templates/1-namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: observability
---
kind: Namespace
apiVersion: v1
metadata:
  name: diut
---
kind: Namespace
apiVersion: v1
metadata:
  name: diut-hcdc
